# Small-C_Preprocessor

./: CMakeLists.txt  README.md
include/Data Structures/: vector.c  vector.h
include/data_structures/: stack.h  vector.c  vector.h
include/file_handler/: file_handler.c  file_handler.h  file_validator.c  file_validator.h
include/preprocessor/: preprocessor.c  preprocessor.h
src/: main.c  utils.c
tests/: test_file_validators.c  tests.h
tests/data_structures/: test_vector.c
